# LLM-Agents

./: GenAI_R&D_Agent.ipynb  README.md  crewAI_LinkedIn_Post_Generator.ipynb
Model_Minimum_System_Req_Crew/: .gitignore  pyproject.toml
Model_Minimum_System_Req_Crew/src/model_min_sys_req_crew/: crew.py  main.py
Model_Minimum_System_Req_Crew/src/model_min_sys_req_crew/config/: agents.yaml  tasks.yaml
